セッティング

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,13 +3,43 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <br/><br/>
-              <h2>About Landing-Page</h2>
+              <h2>Profile</h2>
               <br/>
-                <p>Landing-Page is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/landing-page/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>The Jekyll version is brought to you by <a href="https://github.com/swcool">Shane Weng</a></p>
-                <p>This theme features stock photos by <a href="http://join.deathtothestockphoto.com//">Death to the Stock Photo</a>.</p>
-                <p>Landing-Page includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+              <div class="col-lg-4">
                 <br/>
+                <br/>
+                <br/>
+                <img src="../img/profile/moriyama.png" width="100%" />
               </div>
+
+              <div class="col-lg-8 text-left">
+                <h3 class="text-left">自己紹介</h3>
+                <br/>
+                <p class="text-left">
+                  はじめまして．盛山将広と申します．
+                </p>
+                <p class="text-left">
+                  知識情報学を専攻している理系大学院生です．
+                </p>
+                <p class="text-left">
+                  研究テーマは「情報検索におけるユーザの情報探索行為の支援」です．
+                </p>
+                <p class="text-left">
+                  研究や趣味などで Web アプリや iOS アプリを開発しています．
+                </p>
+                <h3 class="text-left">よく使用する技術 &amp; ソフトウェア</h3>
+                <img src="../img/profile/html5:css:js.jpg" width="80px" />
+                <img src="../img/profile/jquery.png" width="80px" />
+                <img src="../img/profile/d3js.jpg" width="80px" />
+                <img src="../img/profile/python.png" width="80px" />
+                <img src="../img/profile/django.png" width="80px" />
+                <img src="../img/profile/swift.png" width="80px" />
+                <img src="../img/profile/mysql.jpg" width="80px" />
+                <img src="../img/profile/github.png" width="80px" />
+                <img src="../img/profile/atom.png" width="80px" />
+                <img src="../img/profile/vagrant.png" width="80px" />
+
+              </div>
+            </div>
         </div>
     </section>
