--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,14 +15,17 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
             	<li>
-                    <a class="page-scroll" href="#about">About</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#services">Product</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
-                </li>
+                  <a class="page-scroll" href="#about">About</a>
+              </li>
+              <li>
+                  <a class="page-scroll" href="#services">Product</a>
+              </li>
+              <li>
+                  <a class="page-scroll" href="#research">Research &amp; Award</a>
+              </li>
+              <li>
+                  <a class="page-scroll" href="#contact">Contact</a>
+              </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
