--- a/_includes/career.html
+++ b/_includes/career.html
@@ -1,11 +1,13 @@
-<!-- Research Section -->
-<section id="research" class="container content-section text-center">
+<!-- Career Section -->
+<section id="career" class="container content-section text-center">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
           <br/><br/>
-          <h2>Research</h2>
+          <h2>Career</h2>
+          <br/>
+          <h3>Research</h3>
           <div class="text-left">
-            <h3>国際会議</h3>
+            <h4>国際会議</h4>
             <ul>
               <li>
                 <em>Yukihiro Moriyama</em>, Mitsunori Matsushita, Yasufumi Takama :
@@ -14,27 +16,30 @@
                 pp. 77-82 (2015.11).
               </li>
             </ul>
-            <h3>国内会議(査読あり)</h3>
+            <h4>国内会議(査読あり)</h4>
             <ul>
               <li>
                 白水菜々重, 月川香奈子, <em>盛山将広</em>, 松下光範 :
                 高齢者の旅行における体験情報の外在化を目的とした協創環境のデザイン,
                 インタラクション2015 (2015.3).
+                <a href="http://www.interaction-ipsj.org/proceedings/2015/data/20150226/15INT013.pdf" target="_blank">[PDF]</a>
               </li>
             </ul>
-            <h3>国内会議(査読なし)</h3>
+            <h4>国内会議(査読なし)</h4>
             <ul>
               <li>
                 <em>盛山将広</em>, 松下光範, 高間康史 :
                 コンテクスト検索による情報探索行為を支援するための可視化インタフェースの提案,
                 第 29 回人工知能学会全国大会予稿集,
                 1I3-OS-10b-2in (2015.6).
+                <a href="https://kaigi.org/jsai/webprogram/2015/pdf/1I3-OS-10b-2in.pdf" target="_blank">[PDF]</a>
               </li>
               <li>
                 安尾萌, <em>盛山将広</em>, 岡本香帆里, 白水菜々重, 松下光範 :
                 体験学習における学習者の能動的な行動を誘発させる試み,
                 第 29 回人工知能学会全国大会予稿集,
                 1D5-OS-22b-4in (2015.6).
+                <a href="https://kaigi.org/jsai/webprogram/2015/pdf/1D5-OS-22b-4in.pdf" target="_blank">[PDF]</a>
               </li>
               <li>
                 <em>盛山将広</em>, 朝田貫太, 内藤貴文, 松下光範 :
@@ -47,28 +52,47 @@
                 Linked Data を用いた体験情報の外在化を促進するための協創支援環境,
                 第 28 回人工知能学会全国大会予稿集,
                 1G5-OS-19b-4in (2014.5).
+                <a href="https://kaigi.org/jsai/webprogram/2014/pdf/467.pdf" target="_blank">[PDF]</a>
               </li>
               <li>
                 月川香奈子, 白水菜々重, <em>盛山将広</em>, 松下光範 :
                 世代間コミュニケーションを促進するための仕掛けとしての協創,
                 第 28 回人工知能学会全国大会予稿集,
                 2G4-OS-21b-1 (2014.5).
+                <a href="https://kaigi.org/jsai/webprogram/2014/pdf/615.pdf" target="_blank">[PDF]</a>
               </li>
             </ul>
           </div>
           <br/>
-          <h2>Award</h2>
+
+          <h3>Exhibition</h3>
+          <div class="text-left">
+            <ul>
+              <li>
+                <a href="https://www.mozilla.jp/events/2014/open-web-day/">Mozilla Open Web Day in Tokyo</a> にて FirefoxOS アプリケーションの展示(2014.10.5).
+                <a href="http://news.mynavi.jp/articles/2013/09/17/mozillafesintokyo/001.html"　target="_blank">[マイナビ様によるレポート]</a>
+              </li>
+              <li>
+                <a href="http://ja.mozillafactory.org/mozillafestival-in-tokyo-2013">Mozilla Festival in Tokyo</a> にて FirefoxOS アプリケーションの展示 (2013.9.15).
+              </li>
+            </ul>
+          </div>
+          <br/>
+
+          <h3>Award</h3>
           <br/>
           <div class="text-left">
             <ul>
               <li>
-                徳島主催 アニメ×オーブンデータハッカソン 特別賞受賞 (2014.9.28)
+                徳島主催 アニメ×オーブンデータハッカソン 特別賞受賞 (2014.9.28).
               </li>
               <li>
-                Firefox OS x HTML5 x LOD WEBイノベーションハッカソン Mozilla 賞 (2014.9.15)
+                Firefox OS x HTML5 x LOD WEBイノベーションハッカソン Mozilla 賞 (2014.9.15).
               </li>
             </ul>
           </div>
+          <br/>
+
         </div>
     </div>
 </section>
