--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#research">Research &amp; Award</a>
+                        <a href="#career">Career</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
