--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
                   <a class="page-scroll" href="#services">Product</a>
               </li>
               <li>
-                  <a class="page-scroll" href="#research">Research &amp; Award</a>
+                  <a class="page-scroll" href="#career">Career</a>
               </li>
               <li>
                   <a class="page-scroll" href="#contact">Contact</a>
