--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 		{% include header.html %}
 		{% include about.html %}
 		{% include page_content.html %}
-		{% include research.html %}
+		{% include career.html %}
 		{% include contact.html %}
 		{% include footer.html %}
 		{% include js.html %}
