--- a/_includes/career.html
+++ b/_includes/career.html
@@ -5,7 +5,7 @@
           <br/><br/>
           <h2>Career</h2>
           <br/>
-          <h3>Research</h3>
+          <h3>Study</h3>
           <div class="text-left">
             <h4>国際会議</h4>
             <ul>
