--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <br/><br/>
-              <h2>Profile</h2>
+              <h2>About</h2>
               <br/>
               <div class="col-lg-4">
                 <br/>
