--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#about">Profile</a>
+                        <a href="#about">About</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
