--- a/_includes/career.html
+++ b/_includes/career.html
@@ -14,6 +14,7 @@
                 Visual User Interface to Supporting Information Seeking Behavior in Context Searching,
                 Proceedings of the 2015 Conference on Technologies and Applications of Artificial Intelligence,
                 pp. 77-82 (2015.11).
+                <a href="http://ieeexplore.ieee.org/xpl/abstractAuthors.jsp?reload=true&arnumber=7407103" target="_blank">[LINK]</a>
               </li>
             </ul>
             <h4>国内会議(査読あり)</h4>
@@ -46,6 +47,7 @@
                 コミック閲覧時のユーザの興味をトリガとした情報アクセス手法の検討,
                 HCGシンポジウム2014論文集,
                 pp. 352- 356 (2014.12).
+                <a href="http://www.ieice.org/ken/paper/JBSw/">[LINK]</a>
               </li>
               <li>
                 <em>盛山将広</em>, 月川香奈子, 白水菜々重, 松下光範 :
