add paper in domestic

--- a/_includes/career.html
+++ b/_includes/career.html
@@ -29,6 +29,13 @@
             <h4>国内会議(査読なし)</h4>
             <ul>
               <li>
+                安尾萌, <em>盛山将広</em>, 白水菜々重, 松下光範:
+                行動履歴に応じた情報提示に基づく場に対する気づきの支援,
+                FIT2015 情報科学技術フォーラム講演論文集,
+                J-020 (2015.9).
+                <a href="https://www.ieice.org/jpn/event/FIT/pdf/d/2015/J-020.pdf" target="_blank">[PDF]</a>
+              </li>
+              <li>
                 <em>盛山将広</em>, 松下光範, 高間康史 :
                 コンテクスト検索による情報探索行為を支援するための可視化インタフェースの提案,
                 第 29 回人工知能学会全国大会予稿集,
