--- a/_includes/career.html
+++ b/_includes/career.html
@@ -44,7 +44,7 @@
               </li>
               <li>
                 安尾萌, <em>盛山将広</em>, 岡本香帆里, 白水菜々重, 松下光範 :
-                体験学習における学習者の能動的な行動を誘発させる試み,
+                場の理解の積極的関与を促す体験学習支援システム,
                 第 29 回人工知能学会全国大会予稿集,
                 1D5-OS-22b-4in (2015.6).
                 <a href="https://kaigi.org/jsai/webprogram/2015/pdf/1D5-OS-22b-4in.pdf" target="_blank">[PDF]</a>
