--- a/_includes/career.html
+++ b/_includes/career.html
@@ -94,6 +94,9 @@
           <div class="text-left">
             <ul>
               <li>
+                <a href="https://yu-suzuki.github.io/dbws2016/">関西データベースワークショップ2016</a> 優秀賞 (2016.9.12).
+              </li>
+              <li>
                 徳島主催 アニメ×オーブンデータハッカソン 特別賞受賞 (2014.9.28).
               </li>
               <li>
