--- a/_includes/career.html
+++ b/_includes/career.html
@@ -9,10 +9,20 @@
           <div class="text-left">
             <h4>国際会議</h4>
             <ul>
+              <!-- <li>
+                <em>Yukihiro Moriyama</em>, Byeongseon Park and Mitsunori Matsushita :
+                Designing A Question-Answering System for Comic Contents,
+                The First International Workshop on coMics ANalysis, Processing and Understanding (2016.12.4). 査読結果待ち
+              </li> -->
+              <li>
+                <em>Yukihiro Moriyama</em>, Megumi Yasuo and Mitsunori Matsushita :
+                Information Access Method Triggered by User's Interests During Comic Reading,
+                The 5th Asian Conference on Information systems (ACIS2016) (2016.10.27). 掲載予定 Short Paper
+              </li>
               <li>
                 <em>Yukihiro Moriyama</em>, Mitsunori Matsushita, Yasufumi Takama :
                 Visual User Interface to Supporting Information Seeking Behavior in Context Searching,
-                Proceedings of the 2015 Conference on Technologies and Applications of Artificial Intelligence,
+                In Proceedings of the 2015 Conference on Technologies and Applications of Artificial Intelligence,
                 pp. 77-82 (2015.11).
                 <a href="http://ieeexplore.ieee.org/xpl/abstractAuthors.jsp?reload=true&arnumber=7407103" target="_blank">[LINK]</a>
               </li>
