--- a/_includes/career.html
+++ b/_includes/career.html
@@ -9,15 +9,15 @@
           <div class="text-left">
             <h4>国際会議</h4>
             <ul>
-              <!-- <li>
+              <li>
                 <em>Yukihiro Moriyama</em>, Byeongseon Park and Mitsunori Matsushita :
                 Designing A Question-Answering System for Comic Contents,
-                The First International Workshop on coMics ANalysis, Processing and Understanding (2016.12.4). 査読結果待ち
-              </li> -->
+                The First International Workshop on coMics ANalysis, Processing and Understanding (2016.12.4).
+              </li>
               <li>
                 <em>Yukihiro Moriyama</em>, Megumi Yasuo and Mitsunori Matsushita :
                 Information Access Method Triggered by User's Interests During Comic Reading,
-                The 5th Asian Conference on Information systems (ACIS2016) (2016.10.27). 掲載予定 Short Paper
+                The 5th Asian Conference on Information systems (ACIS2016) (2016.10.27). Short Paper
               </li>
               <li>
                 <em>Yukihiro Moriyama</em>, Mitsunori Matsushita, Yasufumi Takama :
