--- a/_includes/career.html
+++ b/_includes/career.html
@@ -12,7 +12,7 @@
               <li>
                 <em>Yukihiro Moriyama</em>, Byeongseon Park and Mitsunori Matsushita :
                 Designing A Question-Answering System for Comic Contents,
-                The First International Workshop on coMics ANalysis, Processing and Understanding (2016.12.4).
+                The First International Workshop on coMics ANalysis, Processing and Understanding (2016.12.4). 掲載予定
               </li>
               <li>
                 <em>Yukihiro Moriyama</em>, Megumi Yasuo and Mitsunori Matsushita :
