--- a/_includes/career.html
+++ b/_includes/career.html
@@ -20,7 +20,7 @@
                 The 5th Asian Conference on Information systems (ACIS2016) (2016.10.27). Short Paper
               </li>
               <li>
-                <em>Yukihiro Moriyama</em>, Mitsunori Matsushita, Yasufumi Takama :
+                <em>Yukihiro Moriyama</em>, Mitsunori Matsushita and Yasufumi Takama :
                 Visual User Interface to Supporting Information Seeking Behavior in Context Searching,
                 In Proceedings of the 2015 Conference on Technologies and Applications of Artificial Intelligence,
                 pp. 77-82 (2015.11).
