--- a/_includes/career.html
+++ b/_includes/career.html
@@ -12,7 +12,7 @@
               <li>
                 <em>Yukihiro Moriyama</em>, Byeongseon Park and Mitsunori Matsushita :
                 Designing A Question-Answering System for Comic Contents,
-                The First International Workshop on coMics ANalysis, Processing and Understanding (2016.12.4). 掲載予定
+                The First International Workshop on coMics ANalysis, Processing and Understanding (2016.12.4).
               </li>
               <li>
                 <em>Yukihiro Moriyama</em>, Megumi Yasuo and Mitsunori Matsushita :
@@ -39,7 +39,17 @@
             <h4>国内会議(査読なし)</h4>
             <ul>
               <li>
-                安尾萌, <em>盛山将広</em>, 白水菜々重, 松下光範:
+                赤井有紀, <em>盛山将広</em>, 松下光範 :
+                漫符を利用したコミック内の心情・行動描写検索システム,
+                第 15 回 デジタルコンテンツクリエーション研究会予稿集 (2017.1) 掲載予定.
+              </li>
+              <li>
+                盛山将広, 松下光範:
+                コンテクスト検索結果の解釈を支援する情報探索インタフェースの構築に関する研究:
+                関西データベースワークショップ2016 (2016.9).
+              </li>
+              <li>
+                安尾萌, <em>盛山将広</em>, 白水菜々重, 松下光範 :
                 行動履歴に応じた情報提示に基づく場に対する気づきの支援,
                 FIT2015 情報科学技術フォーラム講演論文集,
                 J-020 (2015.9).
