--- a/_includes/career.html
+++ b/_includes/career.html
@@ -13,6 +13,7 @@
                 <em>Yukihiro Moriyama</em>, Byeongseon Park and Mitsunori Matsushita :
                 Designing A Question-Answering System for Comic Contents,
                 The First International Workshop on coMics ANalysis, Processing and Understanding (2016.12.4).
+                <a href="http://dl.acm.org/citation.cfm?id=3011554" target="_blank">[LINK]</a>
               </li>
               <li>
                 <em>Yukihiro Moriyama</em>, Megumi Yasuo and Mitsunori Matsushita :
@@ -39,9 +40,24 @@
             <h4>国内会議(査読なし)</h4>
             <ul>
               <li>
+                西川奈都月, <em>盛山将広</em>, 内藤峻, 松下光範 :
+                初学者を対象としたニュース記事中のトピックの関係性に基づく可視化インタフェースの提案,
+                第 15 回インタラクティブ情報アクセスと可視化マイニング研究会予稿集 (2017.3) 掲載予定.
+                <a href="http://must.c.u-tokyo.ac.jp/sigam/sigam15/sigam1510.pdf" target="_blank">[PDF]</a>
+
+              </li>
+              <li>
+                西村勇哉, 大杉隆文, <em>盛山将広</em>, 内藤峻, 松下光範 :
+                研究初心者のサーベイ行為を対象とした論文整理支援システムの基礎検討,
+                第 15 回インタラクティブ情報アクセスと可視化マイニング研究会予稿集 (2017.3) 掲載予定.
+                <a href="http://must.c.u-tokyo.ac.jp/sigam/sigam15/sigam1504.pdf" target="_blank">[PDF]</a>
+
+              </li>
+              <li>
                 赤井有紀, <em>盛山将広</em>, 松下光範 :
                 漫符を利用したコミック内の心情・行動描写検索システム,
-                第 15 回 デジタルコンテンツクリエーション研究会予稿集 (2017.1) 掲載予定.
+                第 15 回 デジタルコンテンツクリエーション研究会予稿集 (2017.1).
+                <a href="https://ipsj.ixsq.nii.ac.jp/ej/index.php?active_action=repository_view_main_item_detail&page_id=13&block_id=8&item_id=176890&item_no=1" target="_blank">[LINK]</a>
               </li>
               <li>
                 盛山将広, 松下光範:
