update profile image

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
                 <br/>
                 <br/>
                 <br/>
-                <img src="../img/profile/moriyama.png" width="100%" />
+                <img src="../img/profile/moriyama_new.jpg" width="100%" />
               </div>
 
               <div class="col-lg-8 text-left">
